--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
               </p>
               <div class="dropdown-divider"></div>
               <p class="card-text">
-                <small class="text-muted">Educação/small>
+                <small class="text-muted">Educação</small>
               </p>
               <a
                 href="https://api.whatsapp.com/send?phone=5531994003812&text=Deixe%20sua%20mensagem!"
